Removed menu block title for the wdoc tree. Updated CSS to avoid loosing too much space. Added megaphone icon, and use it for purpose page.
git-svn-id: https://svn.eiffel.com/eiffelstudio-public/trunk@96647 8089f293-4706-0410-a29e-feb5c42a2edf

--- a/Src/web/eiffel-org/site/themes/eiffel-org/assets/scss/all.scss
+++ b/Src/web/eiffel-org/site/themes/eiffel-org/assets/scss/all.scss
@@ -279,7 +279,7 @@
 	}
 }
 
-.search-form{
+.search-form {
 	width: 181px;
 	padding: 4px 5px 4px 21px;
 	height: 18px;
@@ -405,12 +405,12 @@
 
 #main{
 	@include mask;
-	padding: 48px 0;
+	padding: 28px 0;
 	&:after,
 	&:before{
 		position: absolute;
 		width: 100%;
-		height: 32px;
+		height: 22px;
 		content: '';
 	}
 	&:after{
@@ -684,7 +684,7 @@
 		overflow: hidden;
 		color: #13a69a;
 		padding: 0 50px 0 0;
-		margin: 0 0 28px;
+		margin: 0 0 5px;
 		h1{
 			margin: 0 0 -1px;
 		}
@@ -854,7 +854,7 @@
 #sidebar{
 	@include grid(3);
 	padding: 0;
-	margin: 0 2px 0 2px;
+	margin: 0px 2px 0 2px;
 	.holder{
 		padding: 5px;
 	}
